# ccm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  MVP_ROADMAP.md  README.md  ROADMAP.md  rust-toolchain.toml  rustfmt.toml
crates/ccm/: Cargo.toml
crates/ccm-core/: Cargo.toml
crates/ccm-core/src/: error.rs  lib.rs  paths.rs
crates/ccm-core/src/profile/: manager.rs  model.rs
crates/ccm-test-utils/: Cargo.toml
docs/reference/: guide.md  initial-achitecture-design.md
