[workspace]
resolver = "2"
members = [
    "crates/ccm",
    "crates/ccm-core"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Undiluted7027 <Undiluted7027@proton.me>"]
license = "MIT"
repository = "https://github.com/Undiluted7027/ccm"
homepage = "https://github.com/Undiluted7027/ccm"
description = "Claude Code Manager - fnm-style configuration management for Claude Code CLI"
keywords = ["claude", "ai", "cli", "configuration", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Serialization
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
toml = "0.9.8"

# CLI
clap = { version = "4.5.56", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"

# Async runtime (for potential future use)
tokio = { version = "1", features = ["full"] }

# Credential storage
keyring = "3.6.3"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.9.2"

# Filesystem & paths
dirs = "6.0"
home = "0.5.12"
walkdir = "2.5.0"
tempfile = "3.24"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"
color-eyre = "0.6.5"

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Testing
assert_cmd = "2.1.2"
predicates = "3.1.3"
assert_fs = "1.1.3"

# Cross-platform
which = "8.0"

# Pre-Commit
prek = "0.3.0"