[package]
name = "ccm-core"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

# Crate-specific dependencies
# We will add keyring, etc. here in later phases
dirs = "6.0"
