[package]
name = "ccm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Claude Code Manager"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
keyring.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
dirs.workspace = true
home.workspace = true
walkdir.workspace = true
tracing.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true